--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Movie Trivia</title>
 </head>
 <body>
-    <h1>Movie Trivia</h1>
+    <!-- <h1>Movie Trivia</h1> -->
     <div class="container">
         <div id="question-container" class="hide">
          <div id="question">Question</div>
