--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Movie Trivia</title>
-</head>
-<body>
-    <!-- <h1>Movie Trivia</h1> -->
-    <div class="container">
-        <div id="question-container" class="hide">
-         <div id="question">Question</div>
-         <div id="answer-buttons" class="btn-grid">
-          <button class="btn">Answer 1</button>
-          <button class="btn">Answer 2</button>
-          <button class="btn">Answer 3</button>
-          <button class="btn">Answer 4</button>
-          </div>
-         </div>
-         <div class="controls">
-             <button id="start-btn" class="start-btn btn">Start</button>
-             <button id="next-btn" class="next-btn btn hide">Next</button>
-         </div>
+  </head>
+  <body>
+        
+        <div class="container">  
+            <h1>Movie Trivia!</h1> 
+            <div id='quizControls'>
+                <form id='form'>
+
+                    <input type="submit" id="button" value="Start Trivia">
+                </form>
+            </div>
+            <div class="questionContainer"></div>
+
+            <div class="winner">
+                <h2>Thanks for playing!</h2>
+                <h3>Would you like to try again?</h3>
+                <button class="btn btn--yes" onclick="location.reload()">Yes</button>
+                <button class="btn btn--no" onclick="confirmClose()">No</button>
+            </div>
+            <div class="score">
+                <h2><span class='player'></span> Score: <span class="score--change"></span>/<span class="score--total"></span></h2>
+            </div>
+            
         </div>
-</body>
+    <script src='app.js'></script>
+  </body>
 </html>
