updated alt for lobby gif

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>Movie Trivia</title>
   </head>
   <body>
+   
         
         <div class="container">  
             <h1>Movie Trivia!</h1> 
             <div id='quizControls'>
                 <form id='form'>
-
+                  <div class=”mainDiv”><img  class="displayed" src="images/giphy.gif" alt="Lets all to the lobby gif"></div>
                     <input type="submit" id="button" value="Start Trivia">
                 </form>
             </div>
