Updated mobile view

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
         <div class="container">  
             <h1>Movie Trivia!</h1> 
-            <div id='quizControls'>
+            <div id='triviaControls'>
                 <form id='form'>
                   <div class=”mainDiv”><img  class="displayed" src="images/giphy.gif" alt="Lets all to the lobby gif"></div>
                     <input type="submit" id="button" value="Start Trivia">
